# student_knowledge_admin

./: .gitignore  README.md  manage.py  pyproject.toml
check_notes/: apps.py  check_notes.py
create_note/: apps.py  create_note.py
docs/reqs/: general.adoc
project/services/: check_notes.py  create_note.py  search_by_tag.py
search_notes/: apps.py
student_knowledge_admin/: asgi.py  settings.py  urls.py  wsgi.py
