[tool.poetry]
name = "project"
version = "0.1.0"
description = "Some desc"
authors = ["jose <jose.s.contacto@gmail.com>"]
license = "Free"
readme = "README.md"
include = ['project']

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./tests/"
addopts = "--strict-markers"
markers = [
    "integration: run integration testing",
    "unit: run unit testing",
]
