[tool.poetry]
name = "student_knowledge_admin"
version = "0.1.0"
description = "Some desc"
authors = ["jose <jose.s.contacto@gmail.com>"]
license = "Free"
readme = "README.md"
include = ['student_knowledge_admin']

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.1.0"
click = "^8.1.7"
django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./tests/"
addopts = "--strict-markers"
markers = [
    "integration: run integration testing",
    "unit: run unit testing"]

[tool.poetry.scripts]
adm = "manage:main"
